--- a/app/views/pastes/index.html.erb
+++ b/app/views/pastes/index.html.erb
@@ -1,20 +1,48 @@
-<h1>Listing pastes</h1>
-
-<table>
-  <tr>
-    <th>Code</th>
-  </tr>
-
-<% @pastes.each do |paste| %>
-  <tr>
-    <td><%=h paste.code %></td>
-    <td><%= link_to 'Show', paste %></td>
-    <td><%= link_to 'Edit', edit_paste_path(paste) %></td>
-    <td><%= link_to 'Destroy', paste, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New paste', new_paste_path %>
+<div id="content">
+	<div id="all-pastes">
+		<div id="all-pastes-count">
+			<span class="all-pastes-header">All pastes</span>
+			<span class="all-pastes-header-sub"><%= "(#{@all_pastes_count} so far)" %></span>
+			<div id="pagination-container" class="paste-pagination">
+			  <%= will_paginate @pastes, :container => false, :previous_label => 'Previous', :next_label => 'Next' %>
+			</div>
+		</div>
+		<% for paste in @pastes %>
+			<div class="paste-summary">
+				<p class="paste-summary-header-action">
+					<%= link_to 'view', paste_path(paste), { :class => 'link-spacer' } %>
+				</p>
+				<p class="paste-summary-header-info">
+					<%= paste.parser.display_name + " (" + paste.number_of_lines.to_s + " lines)" %>
+				</p>
+				<div class="paste-summary-code">
+					<% paste.number_of_lines < 10 ? text_rows = paste.number_of_lines : text_rows = 10 %>
+					<%= text_area_tag 'paste-code-summary', paste.code_summary(10), { :disabled => true, :rows => text_rows, :class => 'paste-code-summary-text-area' } %>
+				
+				</div>
+			
+			</div>
+			<div style="clear: both"></div>
+		<% end %>
+	</div>
+</div>
+<div id="right">
+	<div id="all-right-stats">
+		<table width="100%" cellspacing="0" cellpadding="0" border="0">
+				<tr>
+					<td colspan="2" class="stat-heading">By Language</td>
+				</tr>
+			
+				<% @paste_counts.sort_by{ |k,v| v}.reverse.each { |p_cnt| %>
+					<tr>
+						<td><%= p_cnt[0] %></td>
+						<td class="lang-stat-count"><%= p_cnt[1] %></td>
+					</tr>
+				<% } %>
+		</table>
+		<br/>
+		<br/>
+		<br/>
+	</div>
+</div>
+<div style="clear: both"></div>
