added functional tests.  also updated code where needed to correct functioanlity.  also updated unit tests.

--- a/app/views/pastes/_pasted_details.html.erb
+++ b/app/views/pastes/_pasted_details.html.erb
@@ -4,7 +4,7 @@
 		</tr>
 		<tr>
 			<td class="paste-info-key">as</td>
-			<td class="stat"><%= " #{@paste.parser.display_name}" %></td>
+			<td class="stat"><%= " #{@paste.parser.display_name}" if @paste.parser %></td>
 		</tr>
 		<tr>
 			<td class="paste-info-key">on</td>
