--- a/app/views/pastes/new.html.erb
+++ b/app/views/pastes/new.html.erb
@@ -1,3 +1,10 @@
+<% content_for("page_scripts") do %>
+    Event.observe(window, 'load',
+      function() { 
+	 	select_parser();
+	  }
+    );
+<% end %>
 <div id="content">
 	<div id='code'>
 		<div id='new-code-block'>
