added functionality for flash messages when an id can't be found.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,11 @@
 		</div>
 	</div>		
 	<div id="container">
-			<%= yield %>
+		<% if flash[:notice] %>
+			<p class='flash-notice'><%= flash[:notice] %></p>
+		<% end %>
+		
+		<%= yield %>
 	</div>
 </body>
 </html>
