--- a/app/views/pastes/edit.html.erb
+++ b/app/views/pastes/edit.html.erb
@@ -7,7 +7,7 @@
 						<%= f.text_area :code, :rows => 26, :cols => 60, :class => 'code-paste-text-area' %>
 					</div>
 					<div id="new-paste-options">
-						<%= f.collection_select(:parser_id, Parser.all, :id, :display_name, { :include_blank => false }) %>
+						<%= f.collection_select(:parser_id, @parsers, :id, :display_name, { :include_blank => false }) %>
 						<span class='spacer'></span>
 						<span class='spacer'></span>
 						<span class='spacer'></span>
