--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -386,3 +386,20 @@ a:hover {
 	display: inline;
 	
 }
+
+#legal {
+	margin-top: 15px;
+	border-color: #d7d7d7;
+	border-style: solid;
+	border-width: 1px 3px 3px 1px;	
+	background-color: #ffffff;
+	padding: 25px 20px;
+}
+
+.legal-section-heading {
+	padding: 4px 10px;
+	color: #365ebf;
+	font-size: 10pt;
+	background-color: #D7D7D7;
+	
+}
