--- a/app/views/static/legal.html.erb
+++ b/app/views/static/legal.html.erb
@@ -20,6 +20,6 @@
 		The author/maintainer of this site may, at their own discretion, remove any content, without notification, from this site that is deemed to be inappropriate.
 		<br/>
 		<br/>
-		
 	</div>
 </div>
+<div style="clear: both"></div>
