--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -110,7 +110,7 @@ a:hover {
 #container {
 	width: 90%;
 	margin: 15px auto 0px auto;
-	padding-bottom: 30px;
+	padding-bottom: 15px;
 	padding-top: 55px;
 }
 
@@ -402,4 +402,24 @@ a:hover {
 	font-size: 10pt;
 	background-color: #D7D7D7;
 	
+}
+
+#footer {
+	width: 90%;
+	margin: 0px auto 10px auto;
+	height: 25px;
+}
+
+#footer-links {
+	width: 80%;
+}
+
+#footer-link-legal {
+	padding: 0px 25px;
+	float: left;
+}
+
+#footer-link-source {
+	padding: 0px 25px;
+	float: right;
 }
