updated clipboard libs.  also refactored layout/js to accomidate

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
   %head
     %meta{:http_equiv => 'content-type', :content => 'text/html;charset=UTF-8'}
     %title Code Paste
-    = javascript_include_tag 'prototype', 'ZeroClipboard', 'application'
+    = javascript_include_tag 'prototype', 'ZeroClipboard'
     = stylesheet_link_tag 'app'
     = stylesheet_link_tag 'syntax/blackboard.css'
 
